<resources>
    <string name="app_name">Mediclick</string>
    <string name="continue_text">Continue</string>
    <string name="todo">TODO</string>
    <string name="health_tips">Health Tips</string>
    <string name="t">TODO</string>
    <string name="nutritional_analysis">Nutritional Analysis</string>
    <string name="exercise_resources">Exercise Resources</string>
    <string name="yoga_and_meditation">Yoga and Meditation</string>
    <string name="weather_tips">Weather Tips</string>
    <string name="t1">TODO</string>
    <string name="t2">TODO</string>
    <string name="t3">TODO</string>
    <string name="t4">TODO</string>
    <string name="t5">TODO</string>
    <string name="t6">TODO</string>
    <string name="t7">TODO</string>
    <string name="t8">TODO</string>
    <string name="enter_meal_name">Enter meal name</string>
    <string name="enter_ingredients_comma_separated">Enter ingredients (comma-separated)</string>
    <string name="analyze">Analyze</string>
    <string name="text_input">"Text Input\n "</string>
    <string name="recipes">Recipes\n</string>
    <string name="image_text">Image Text</string>
    <string name="textview_a">Enter some text to get nutritional info</string>
    <string name="button">Get Nutrition</string>
    <string name="textview_a1">Input any text</string>
    <string name="textview_aa2">No need to format anything - our state of the art natural language processing algorithms can read any text and extract the right nutrition information.</string>
    <string name="click_here_to_select_a_file">Upload Image with food text</string>
    <string name="textview_b1">Upload an image</string>
    <string name="textview_bb2">Our image text tool automatically detects food words and calculates nutrition information. Great for recipes, food journals, and restaurant menus!</string>
    <string name="textview_c">Enter a dish.</string>
    <string name="button_">Get Recipes</string>
    <string name="textview_c1">Search over 200,000 recipes</string>
    <string name="textview_cc2">From snacks to desserts, appetizers to entrees, find recipes from all corners of the world.</string>
    <string name="textview_1">Lets explore it!</string>
    <string name="textview_2">"Just click on the below tabs to explore"</string>
    <string name="textview_3">World Of Nutrition</string>
    <string name="todo_a">TODO</string>
    <string name="todo_b">TODO</string>
    <string name="todo_c">TODO</string>
    <string name="todo_d">TODO</string>
    <string name="browse">Browse</string>
    <string name="back">Back</string>
    <string name="nutrients">Nutrients</string>
    <string name="total">Total</string>
    <string name="calories">Calories</string>
    <string name="serving_size">Serving Size</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbo_hydreates">Carbo hydreates</string>
    <string name="fibre">Fibre</string>
    <string name="potassium">Potassium</string>
    <string name="total_fat">Total Fat</string>
    <string name="todoq">TODO</string>
    <string name="explore_different_exercise_types_their_benefits_proper_techniques_and_necessary_gear">Explore different exercise types, their benefits, proper techniques, and necessary gear.</string>
    <string name="information">Information</string>
    <string name="exercise_videos">Exercise Videos</string>
    <string name="watch_instructional_videos_demonstrating_proper_exercise_techniques">Watch instructional videos demonstrating proper exercise techniques</string>
    <string name="cardio">Cardio</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="exercise_resources1">Exercise Resources</string>
    <string name="todo12333">td\n</string>
    <string name="todo1234">td\n</string>
    <string name="todo111222">tt\n</string>
    <string name="enter12">enter1</string>
    <string name="submit">submit\n</string>
    <string name="enter_the_lattitude_logitude_of_the_desired_area">enterthelattidued\n</string>
    <string name="weather_infon">weatherinfo\n</string>
    <string name="optional">optional\n</string>
    <string name="lattitude">lattitude\n</string>
    <string name="enter">enter\n</string>
    <string name="longitude">longitude\n</string>
    <string name="tod">tod</string>
    <string name="next">next</string>
    <string name="note">note</string>
    <string name="if_lattitude_and_longitude_not_found_then_use_any_online_source_to_find_it">lattituddenotfound</string>
    <string name="enter_city">entercity</string>
    <string name="todo1">todo1</string>
    <string name="in_detail_descriptionn">indetaildescription</string>
    <string name="cloud_coverage">cloudcoverage</string>
    <string name="humidity">humidity</string>
    <string name="wind_speede">windspeed</string>
    <string name="weather_infor">weatherinto</string>
    <string name="todo5">todo</string>
    <string name="temperaturee">temperature\n</string>
    <string name="todo14444">tdo\n</string>
    <string name="todo12321">td\n</string>
    <string name="todo990">todo990</string>
    <string name="todo8888">todo8888</string>
    <string name="todo778">todo778</string>
    <string name="you_already_have_an_account">you already have an account</string>
    <string name="please_login_or_sign_up_to_continue_using_our_app">please login or sign up to continue using our app</string>
    <string name="enter_via_social_networks">enter via social networks</string>
    <string name="welcome">Welcome</string>
    <string name="todo009">todo009</string>
    <string name="todo6678">todo6678\n</string>
    <string name="login">login\n</string>
    <string name="todo9090">todo9090</string>
    <string name="normal_bmi_weight_range_for_the_height_18_5_24_9">Normal BMI weight range for the height: 18.5 – 24.9</string>
    <string name="gender">GENDER</string>
    <string name="weight">WEIGHT</string>
    <string name="kg">(KG)</string>
    <string name="height">HEIGHT</string>
    <string name="cm">(CM)</string>
    <string name="tod1o">TODO</string>
    <string-array name="exercise_types">
        <item>Exercise Type</item>
        <item>Exercise Type 1</item>
        <item>Exercise Type 2</item>
        <item>Exercise Type 3</item>
        <item>Exercise Type 4</item>
        <item>Exercise Type 5</item>
        <item>Exercise Type 6</item>
    </string-array>
    <string name="exercise_type_hint">Muscle Name</string>
    <string-array name="targeted_muscles">
        <item>Muscle Name</item>
        <item>Abdominals</item>
        <item>Abductors</item>
        <item>Adductors</item>
        <item>Biceps</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Forearms</item>
        <item>Glutes</item>
        <item>Hamstrings</item>
        <item>Lats</item>
        <item>Lower Back</item>
        <item>Middle Back</item>
        <item>Neck</item>
        <item>Quadriceps</item>
        <item>Traps</item>
        <item>Triceps</item>
    </string-array>
    <string name="targeted_muscles_hint">Targeted Muscles</string>
    <string-array name="exercise_difficulty">
        <item>Exercise Difficulty</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string name="exercise_difficulty_hint">Exercise Difficulty</string>
    <string name="default_web_client_id" />
</resources>