<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:contentDescription="@string/t"
        android:scaleType="centerCrop"
        android:src="@drawable/heath_tips"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewa"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/health_tips"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/R1"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/white_rounded_background"
            android:elevation="2dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImageView1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/t5"
                android:src="@drawable/baseline_local_dining_24" />

            <TextView
                android:id="@+id/titleTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/iconImageView1"
                android:text="@string/nutritional_analysis"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/arrowImageView2"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/t1"
                android:src="@drawable/baseline_arrow_forward_ios_24" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/R2"
            android:layout_width="372dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/white_rounded_background"
            android:elevation="2dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/t6"
                android:src="@drawable/baseline_fitness_center_24" />

            <TextView
                android:id="@+id/titleTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/iconImageView3"
                android:text="@string/exercise_resources"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/arrowImageView4"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/t2"
                android:src="@drawable/baseline_arrow_forward_ios_24" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/R3"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/white_rounded_background"
            android:elevation="2dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImageView5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/t7"
                android:src="@drawable/baseline_wb_sunny_24" />

            <TextView
                android:id="@+id/titleTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/iconImageView5"
                android:text="@string/weather_tips"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/arrowImageView6"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/t3"
                android:src="@drawable/baseline_arrow_forward_ios_24" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/R4"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/white_rounded_background"
            android:elevation="2dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImageView7"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/t8"
                android:src="@drawable/baseline_fitness_center_24" />

            <TextView
                android:id="@+id/titleTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/iconImageView7"
                android:text="@string/yoga_and_meditation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/arrowImageView8"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/t4"
                android:src="@drawable/baseline_arrow_forward_ios_24" />

        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>
