<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0003A9F4">


    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="241dp"
        android:indeterminateDrawable="@drawable/ranibow_main"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="#FFEB3B"
        android:text="@string/weather_infon"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/image1"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/wSpeedTextView"
        android:layout_width="343dp"
        android:layout_height="106dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/alata"
        android:lineSpacingExtra="12sp"
        android:text="@string/enter_the_lattitude_logitude_of_the_desired_area"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="271dp"
        android:layout_height="37dp"
        android:autofillHints="something"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/optional"
        android:textColor="#43A047"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wSpeedTextView"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck,TextViewEdits,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="84dp"
        android:text="@string/longitude"
        android:textColor="#D114C8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/butt"
        app:layout_constraintEnd_toStartOf="@+id/textInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="34dp"
        android:text="@string/lattitude"
        android:textColor="#D114C8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/butt"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textInputEditText"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="37dp"
        android:text="@string/enter12"
        app:layout_constraintBottom_toTopOf="@+id/butt"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#000000"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>