<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="#FFEB3B"
        android:text="Weather Info"
        android:textAlignment="center"
        android:textColor="#FD0101"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="323dp"
        android:layout_height="185dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="37dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/aldrich"
        android:text="Enter your city name"
        android:textAlignment="center"
        android:textColor="#E9E91EDF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_city"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="231dp"
        android:layout_height="76dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="176dp"
        android:text="@string/if_lattitude_and_longitude_not_found_then_use_any_online_source_to_find_it"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="216dp"
        android:text="@string/note"
        android:textColor="#DD1304"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/buttonz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#000000"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>